RELEASE 1
- Fetching all scores
- Fetching score based on id
- Adding a new score
- Deleting a score by id
- Sort scores in asc or desc order

RELEASE 2
- Reading scores
- Save scores to the text file
- Limit scores
- Limit & sort work together
- HTML added

RELEASE 3
- Validations for username
- Password-function added for authentication
- HTML fixed to show only top ten users
- Tests for validation function

RELEASE 4
- HTML fixed to hide id from users
- HTML fixing
- Added Dropbox
