@@ -1,2 +1,48 @@
 # highscore
 Highscore for mobilegame
+
+Author
+Jonna Kyllönen
+Matias Leppänen
+
+(Screenshots)
+
+
+Tech/framework used
+
+Python
+HTML
+CSS
+
+
+External modules:
+
+- `flask`: a web framework for Python.
+- `json`: a built-in Python module for working with JSON data.
+- `operator`: a built-in Python module that provides functions for performing operations on data types such as lists, dictionaries, and tuples.
+- `requests`: a third-party Python library for sending HTTP requests.
+- `flask_bcrypt`: a third-party Python library for encrypting passwords using bcrypt hashing.
+- `os`: a built-in Python module for interacting with the operating system.
+- `firebase_admin`: a third-party Python library for integrating with the Firebase platform.
+- `re`: a built-in Python module for working with regular expressions.
+- `typing`: a built-in Python module for adding type hints to function parameters and return values.
+
+Installation and running
+Provide step by step series of examples and explanations about how to get a development env running. Example:
+
+# clone repo
+git clone highscore (More instructions from here: https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
+cd highscore
+
+# start backend
+python client.py
+
+# start frontend
+https://scores-shxw.onrender.com/
+
+API implementation
+API is deployed to cloud and can be accessed using following url:
+
+https://scores-shxw.onrender.com/
+
+Screencast:
