@@ -1,5 +1,4 @@
 import requests
-# from validation import validate_username
 
 while True:
     print("1) Add customer")
@@ -13,27 +12,24 @@ while True:
 
     if choise == 1:
         username = input("Enter the username: ")
-        # if not validate_username(username):
-        #     print("Username should be 3 alphanumeric characters without special characters")
-        #     continue
         customer_points = int(input("Enter the customers points: "))
         myobj = {'name': username, 'points': customer_points}
         x = requests.post(url, json = myobj)
         if x.status_code == 201:
             print("Customer added succesfully")
         else:
-            print("Your name is already in use, please choose another.")
+            print("Your username is already in use or it is invalid, please choose another.")
         #print(x.status_code)
     elif choise == 2:
         the_id=input("Give the customer id you want to delete:\n")
-        d = requests.delete(f"http://scores-shxw.onrender.com/scores/{the_id}")
+        d = requests.delete(f"http://scores-shxw.onrender.com/scores/{the_id}?pw=secret")
         if d.status_code == 204:
             print("Delete complete.")
         else:
             print(f"ID {the_id} not found")
         #print(d.status_code)
     elif choise == 3:
-        r = requests.get('http://scores-shxw.onrender.com/scores')
+        r = requests.get('http://scores-shxw.onrender.com/scores?pw=secret')
         print(r.text)
     elif choise == 4:
         print("Bye.")
